--- a/src/App.scss
+++ b/src/App.scss
@@ -70,3 +70,45 @@
     max-height: 100vh;
   }
 }
+
+.myr-login-backdrop {
+  background-image: url("assets/login_background/ury@0.75.jpg");
+  @media all and (min-width: 1600px) {
+    background-image: url("assets/login_background/ury@1.0.jpg");
+  }
+  @media all and (min-width: 2048px) {
+    background-image: url("assets/login_background/ury@2.0.jpg");
+  }
+
+  background-size: cover;
+
+  display: block;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .myr-login-main {
+    background-color: rgba(255, 255, 255, 0.8);
+
+    display: inline-block;
+    padding: 1.5em;
+
+    .myr-login-frame {
+      min-width: 600px;
+      min-height: 500px;
+      border: none;
+    }
+
+    @media all and (max-width: 700px) {
+      padding: 0.1em;
+      width: 100%;
+      height: 100%;
+      .myr-login-frame {
+        min-width: 80vw;
+        width: 100%;
+      }
+    }
+  }
+}
