--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,8 @@
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 
+@import "components/components";
+
 .bp3-dark #root {
   background-color: $pt-dark-app-background-color;
 }
