--- a/src/components/Navigation/Sidebar.scss
+++ b/src/components/Navigation/Sidebar.scss
@@ -1,5 +1,5 @@
 .myr-sidebar {
-  z-index: 2000;
+  z-index: 10;
 
   .nav {
     list-style-type: none;
@@ -28,6 +28,14 @@
       font-size: 14px;
       text-align: left;
       width: calc(100% - 1.5em);
+      cursor: pointer;
+
+      transition: 300ms background-color;
+      display: block;
+
+      &:hover {
+        background-color: #c7c7c7;
+      }
 
       .chevron {
         margin-left: -1em;
