--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -48,7 +48,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
-    font-size: 14pt;
+    font-size: 16px;
     cursor: pointer;
     margin-top: 0.4em;
     .expando-icon-container {
