--- a/src/components/Navigation/Sidebar.scss
+++ b/src/components/Navigation/Sidebar.scss
@@ -1,3 +1,18 @@
+.myr-navbar {
+  padding: 8px inherit;
+  z-index: 1000;
+}
+
+.myradio-logo {
+  display: block;
+  max-height: 2em;
+  margin: 0.3em auto;
+}
+
+.bp3-menu-header.bigger-margin {
+  margin: 10px 5px;
+}
+
 .myr-sidebar {
   z-index: 10;
 
@@ -47,5 +62,24 @@
       font-weight: bold;
       font-size: 18px;
     }
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .myr-navbar {
+    display: block;
+    left: 268px;
+    max-width: calc(100% - 268px);
+  }
+
+  .myr-sidebar {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 268px;
+    height: 100vh;
+    //overflow-y: scroll;
+    max-height: 100vh;
   }
 }
